--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-h
+<!DOCTYPE html>
+ <html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="style.css">
+       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+     <title>Menú</title>
+</head>
+
+<body>
+
+  <nav class="menu">
+
+    <header>
+        <img src="macdonalds.png" alt="mcdonalds">
+      </header>
+
+     <div class="content">
+      <a href="#">Restaurantes</a>
+        <a href="#">En familia</a>
+      <a href="#">Nosotros</a>
+        <a href="#">Calidad</a>
+         <a href="#">Facturacion</a>
+          <a href="#">Mcdelivery</a>
+            <a href="#">Cupones</a>
+       </div>
+          <div class="phone">
+            <span class="material-symbols-outlined">menu</span>   
+           </div> 
+    </nav>
+      <img src="oreo.png" alt="oreo">
+
+</body>
+
+</html>
